api/k8s/3_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: api
  type: ClusterIP
