api/k8s/4_ingress_rest.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: api
spec:
  rules:
    - host: orimboard.io
      http:
        paths:
          - path: /api/(.+)
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
